<resources>
    <string name="app_name">Animation</string>
    <string name="ticker.library">Ticker</string>
    <string name="interpolators">Interpolators</string>
    <string name="bottom_bar">Bottom bar</string>
    <string name="awesome_splash">Awesome Splash</string>
    <string name="easy_splash">Easy Splash</string>
    <string name="particle_view">Particle View</string>


    <string name="jelly_toolbar">Jelly toolbar</string>
    <string name="jelly_toolbar_hint">Jelly Hint</string>

    <string name="alerter">Alerter</string>
    <string name="alerter.simple">Simple</string>
    <string name="alerter.background">Background</string>
    <string name="alerter.icon">Icon</string>
    <string name="alerter.duration">Duration</string>
    <string name="alerter.title">Title</string>
    <string name="alerter.onclicklistener">OnClickListener</string>
    <string name="alerter.verbose.text">Verbose text</string>
    <string name="alerter.visibility.callback">Visibility callback</string>

    <string name="focus.resize">FocusResize</string>

    <string name="view">View</string>

    <string name="additive.animations">AdditiveAnimations</string>

    <string name="loading.button">LoadingButton</string>

    <string name="swipe.back.layout">SwipeBackLayout</string>

    <string name="duo.navigation.drawer">DuoNavigationDrawer</string>
    <string name="duo.navigation.menu.item">Menu item</string>

    <string name="expandable.linear.layout">Expandable LinearLayout</string>

    <string name="vega.layout.manager">Vega Layout Manager</string>

    <string name="fancy.toast">Fancy Toast</string>

    <string name="scaling.layout">Scaling Layout</string>
    <string name="scaling.layout.fab">Scaling Layout Fab</string>
    <string name="scaling.layout.search.bar">Scaling Layout SearchBar</string>
    <string name="scaling.layout.collapsing">Scaling layout collapsing</string>
    <string name="scaling.layout.long.text">Long long text Long long text Long long text
    Long long text Long long text Long long text Long long text Long long text Long long text
    Long long text Long long text Long long text Long long text Long long text Long long text
    Long long text Long long text Long long text Long long text Long long text Long long text
    Long long text Long long text Long long text Long long text Long long text Long long text
    Long long text Long long text Long long text Long long text Long long text Long long text </string>

    <string name="success">success</string>
    <string name="failed">failed</string>
    <string name="reset">reset</string>
    <string name="cancel">cancel</string>
    <string name="loading">loading</string>

    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="bottom">Bottom</string>
    <string name="top">Top</string>

    <string name="exit">Exit</string>
    <string-array name="interpolators">
        <item>Accelerate Decelerate</item>
        <item>Accelerate</item>
        <item>Anticipate</item>
        <item>AnticipateOvershoot</item>
        <item>Bounce</item>
        <item>Cycle</item>
        <item>Decelerate</item>
        <item>Linear</item>
        <item>Overshoot</item>
        <item>Path</item>
    </string-array>
</resources>
