<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.kirchhoff.animation.MainActivity">

    <Button
        android:id="@+id/ticker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticker.library"/>

    <Button
        android:id="@+id/interpolators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interpolators"/>

    <Button
        android:id="@+id/bottomBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_bar"/>

    <Button
        android:id="@+id/awesomeSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/awesome_splash" />


    <Button
        android:id="@+id/easySplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easy_splash"/>

    <Button
        android:id="@+id/particleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/particle_view"/>

    <Button
        android:id="@+id/jellyToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jelly_toolbar"/>



</LinearLayout>
